<resources>
    <string name="app_name">Sensors</string>
    <string name="vendor"> • Производитель:</string>
    <string name="version"> • Версия:</string>
    <string name="type"> • Тип:</string>
    <string name="maxRange"> • Максимальный диапозон:</string>
    <string name="resolution"> • Разрешающая способность:</string>
    <string name="power"> • Потребляемая мощность, Вт:</string>
    <string name="minDelay"> • Мин. задержка, мс:</string>
    <string name="stringType"> • Тип строковый:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_sensors">Список</string>
    <string name="title_main">Главная</string>
    <string name="sensor_light">Датчик света</string>
    <string name="sensor_accelerometer">Акселерометр</string>
    <string name="sensor_thermometer">Температура</string>
    <string name="unfortunately">К сожалению на вашем телефоне нет такого датчика</string>
    <string name="about_accelerometer">Ускорение (м/с2) по трём осям</string>
    <string name="about_light">Внешняя освещённость (лк)</string>
    <string name="about_amb_temp">Измерение температуры окружающей среды в градусах Цельсия</string>
    <string name="about_gravity">Измеряет силу тяжести в м/с*c</string>
    <string name="sensor_gravity">Гравитация</string>
    <string name="about_relative_humidity">Относительная влажность в процентах (%)</string>
    <string name="humidity">Влажность</string>
    <string name="linear_acceleration">Линейное ускорение</string>
    <string name="gyroscope">Гироскоп</string>
    <string name="magnetic_field">Магнитное поле</string>
    <string name="orientation">Ориентация</string>
    <string name="pressure">Атмосфетное давление</string>
    <string name="proximity">Расстояние от экрана</string>
    <string name="rotation_vector">Векторная ориентация</string>
    <string name="about_gyroscope">Скорость вращения (рад/с) по трём осям</string>
    <string name="about_linear_acceleration">Линейное ускорение (м/с2) по трём осям без учёта силы тяжести</string>
    <string name="about_magnetic_field">Внешнее магнитное поле (мкТл)</string>
    <string name="about_orientation">Измеряет градусы вращения устройства вокруг всех трех физических осей</string>
    <string name="about_pressure">Измеряет давление окружающего воздуха в гПа или мбар</string>
    <string name="about_proximity">Используется для отключения дисплея во время телефонного разговора\n(Два значения: только ближе или дальше 5 см)</string>
    <string name="about_rotation_vector">Измеряет ориентацию устройства, предоставляя три элемента вектора вращения устройства</string>
    <string name="about_temperature">Измерение температуры в градусах Цельсия (устаревший)</string>
    <string name="step_counter">Шагомер</string>
    <string name="about_step_counter">Измеряет количество пройденных шагов</string>
    <string name="maxValue">Максимальное значение: </string>
    <string name="about_step_counter_text">Пройдено шагов с последней перезагрузки системы\n(Системная задержка отсчета - 10 секунд)</string>
    <string name="compass">Компас</string>
    <string name="about_compass">Отклонение от севера:</string>
    <string name="help">Помощь</string>
    <string name="about_developer">О разработчике</string>
    <string name="cooperation">Для сотрудничества с разработчиком\nпросто напишите (email)</string>
    <string name="write">Написать</string>
    <string name="ads">Посмотрите пожалуйста рекламу\n(так вы поможете разработчику)</string>
    <string name="watch_ads">Посмотреть рекламу</string>
    <string name="donation">Помощь</string>
    <string name="other_developer_apps">Другие приложения разработчика</string>
    <string name="level">Уровень</string>
    <string name="this_is_not_difficult">Это не сложно</string>
    <string name="about_this_is_not_difficult">Данная игра распространяется абсолютно бесплатно, поэтому, если вы хотите поддержать разработчика, просмотрите пожалуйста рекламу нажав на кнопку \"Посмотреть рекламу\", и оставьте отзыв или оценку в Play Market нажав на кнопку \"Другие приложения разработчика\" и выбрав игру. Вам не сложно, а мне приятно)\nВсем удачи!</string>
    <string name="cooperation_word">Сотрудничество</string>
    <string name="thank_you_for_watching_ads">Спасибо за просмотр рекламы</string>
    <string name="confidencial">Политика конфиденциальности</string>
    <string name="sensors"><u>Sensors</u></string>
    <string name="learn_more"><u>Узнать больше</u></string>
    <string name="leave_feedback"><u>Оставить отзыв</u></string>
    <string name="question">\ ?</string>
    <string name="thanks">Это приложение распространяется бесплатно, если вы хотите поблагодарить разработчика, вы можете посмотреть рекламу или оставить денежное дарение.</string>
</resources>